# Raytracing_engine

./: .clang-format  .gitignore  CMakeLists.txt  FEUILLE_DE_ROUTE.txt  README.md
include/: AppRenderer.hpp  SceneOptions.hpp
include/app/: AppRenderer.hpp  ImageHandler.hpp
include/engine/: Camera.hpp  RaytracingRenderer.hpp  Utils.hpp
include/engine/objects/: Object.hpp  Sphere.hpp
include/utils/: engineTools.hpp
src/: AppRenderer.cpp  SceneOptions.cpp  main.cpp
src/app/: AppRenderer.cpp  ImageHandler.cpp
src/engine/: Camera.cpp  RaytracingRenderer.cpp
src/engine/objects/: Sphere.cpp
src/utils/: engineTools.cpp
